<resources>
    <string name="app_name">CIR2</string>
    <string name="contetn_Discription_logo">logo</string>
    <string name="editText_hint_register_number">REGISTER NUMBER</string>
    <string name="editText_hint_password">PASSWORD</string>
    <string name="editText_hint_name">Name</string>
    <string name="editText_hint_confirm_password">CONFIRM PASSWORD</string>
    <string name="editText_hint_mobile_number">MOBILE NUMBER</string>
    <string name="editText_hint_email">EMAIL</string>
    <string name="button_reset_password">RESET PASSWORD</string>
    <string name="textView_text_forgotPassword">FORGOT PASSWORD</string>
    <string name="checkBox_text_RememberMe">REMEMBER ME</string>
    <string name="button_text_login">LOG IN</string>
    <string name="button_text_signup">SIGN UP</string>
    <string name="TextView_forgot_password">Forgot password?</string>
    <string name="TextView_forgot_password_msg">We just need your registered Register Number and we will  to sent you password reset instructions to the registered email Id.</string>


    <string name="title_activity_navigation_drawer">navigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_nav">homeNav</string>
    <string name="navigationItemHome">Home</string>
    <string name="navigationItemProfile">Profile</string>
    <string name="navigationItemAnnouncement">Storage</string>
    <string name="navigationItemNotifications">Notifications</string>
    <string name="navigationItemAptitudeQuiz">Aptitude Quiz</string>
    <string name="navigationItemFeedback">GroupChat</string>
    <string name="navigationItemContatUs">Contact Us</string>
    <string name="navigationItemLogout">Logout</string>
    <string name="navigationItemGroupCommunicate">Communicate</string>
    <string name="title_activity_profile_nav">ProfileNavActivity</string>
    <string name="title_activity_announcement_nav">AnnouncementNavActivity</string>
    <string name="title_activity_notifications_nav">NotificationsNavActivity</string>
    <string name="title_activity_aptitude_quiz_nav">AptitudeQuizNavActivity</string>
    <string name="title_activity_feedback_nav">FeedbackNavActivity</string>
    <string name="title_activity_about_us_nav">AboutUsNavActivity</string>


    <string name="Department_of_CIR">Department of CIR</string>
    <string name="Department_of_CIR_About">CIR, one of the important centres of Amrita Vishwa Vidyapeetham, provides the students of the university with the best career opportunities by closely interacting with many of the corporate giants in India. As a result of the sincere efforts of CIR, on an average about 80 odd potential recruiters from all over India have been consistently visiting our campuses for the last few years for inducting the young talents of this university to their corporate world. CIR has been instrumental in facilitating these recruiters in conducting Pre-Placement Talks, Aptitude and Technical tests, Group Discussion and Interviews.

CIR maintains a close rapport with various industrial firms for organising and coordinating industrial visits, in-plant training, internships and projects for the students.

All the students are imparted compulsory professional training in Life Skills and Aptitude for Campus Recruitment.</string>


    <string name="About_Us_Description">
The Directorate of Corporate and Industry Relations (CIR) is a unique and dedicated department of “Amrita Vishwa Vidyapeetham”, established to provide expert guidance to students in specific areas beyond their regular academic curriculum and help them fulfill their career ambitions.

CIR empowers students with adequate Life Skills and domain skills so that they graduate from the University as competent and confident individuals who can take on the never-ending challenges of the industry.

The University management has demonstrated its commitment to this important function by facilitating excellent infrastructure, human and other resources, in every campus.</string>


    <string name="About_Us_Title_description">\" WORK DONE TO PERFECTION IS INDEED YOGA \"</string>
    <string name="About_us_amma_description">\"The beauty and charm of selfless love and service should not die away from the face of this earth. The world should know that a life of dedication is possible, that a life inspired by love and service to humanity is possible.\"</string>


    <string-array name="genderArray">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string-array name="YearOfPassingArray">
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>
    <string-array name="HSYearOfPassingArray">
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>
    <string-array name="MaritalArray">
        <item>Unmarried</item>
        <item>Married</item>
    </string-array>
    <string-array name="BoardOfExaminationArray">
        <item>CBSE</item>
        <item>CISCE</item>
        <item>AP Board (BIEAP)</item>
        <item>Punjab Board (PSEB)</item>
        <item>Tamil Nadu Board (TNBSE)</item>
        <item>Bihar Board (BSEB)</item>
        <item>Karnataka Board (KSEEB)</item>
        <item>Kerala Board (DHSE)</item>
        <item>Others</item>
    </string-array>
    <string-array name="BloodGrpArray">
        <item>A +ve</item>
        <item>A -ve</item>
        <item>B +ve</item>
        <item>B -ve</item>
        <item>O +ve</item>
        <item>O -ve</item>
        <item>AB +ve</item>
        <item>AB -ve</item>
    </string-array>
    <string-array name="NationalityArray">
        <item>Indian</item>
        <item>Other</item>
    </string-array>
    <string-array name="ReligionArray">
        <item>Hindu</item>
        <item>Christian</item>
        <item>Islam</item>
        <item>Others</item>
    </string-array>
</resources>
