<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/navigationItemHome" />
        <item
            android:id="@+id/nav_Profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/navigationItemProfile" />
        <item
            android:id="@+id/nav_Announcement"
            android:icon="@drawable/ic_announcements"
            android:title="@string/navigationItemAnnouncement" />
        <item
            android:id="@+id/nav_Notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/navigationItemNotifications" />
        <item
            android:id="@+id/nav_AptitudeQuiz"
            android:icon="@drawable/ic_aptitudequiz"
            android:title="@string/navigationItemAptitudeQuiz" />
        <item
            android:id="@+id/nav_Feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/navigationItemFeedback" />
    </group>

    <item android:title="@string/navigationItemGroupCommunicate">
        <menu>
            <item
                android:id="@+id/nav_ContactUs"
                android:icon="@drawable/ic_about_us"
                android:title="@string/navigationItemContatUs" />
            <item
                android:id="@+id/nav_Logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/navigationItemLogout" />
        </menu>
    </item>

</menu>
