<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back_li82"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">


        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:contentDescription="@string/contetn_Discription_logo"
            android:src="@drawable/logo_v3_li8blue" />

        <!--<EditText-->
        <!--android:id="@+id/etSignUpName"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="10dp"-->
        <!--android:background="@drawable/shapeemail"-->
        <!--android:drawableStart="@drawable/ic_name"-->
        <!--android:drawablePadding="10dp"-->
        <!--android:hint="@string/editText_hint_name"-->
        <!--android:inputType="text"-->
        <!--android:padding="15dp"-->
        <!--android:textColor="@color/white"-->
        <!--android:textColorHighlight="@color/white"-->
        <!--android:textColorHint="@color/white" />-->

        <EditText
            android:id="@+id/etSignUpRegID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shapeemail"
            android:drawableStart="@drawable/ic_register_number"
            android:drawablePadding="10dp"
            android:hint="@string/editText_hint_register_number"
            android:inputType="textCapCharacters"
            android:maxLength="14"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/etSignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shapeemail"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/editText_hint_email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white" />

<ProgressBar
    android:id="@+id/SignUpProgressBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etSignUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shapeemail"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:hint="@string/editText_hint_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/TextViewSignUpShowPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignEnd="@+id/etSignUpPassword"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ic_show_password" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etSignUpConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shapeemail"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:hint="@string/editText_hint_confirm_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/TextViewSignUpConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignEnd="@+id/etSignUpConfirmPassword"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ic_show_password" />
        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shapelogin"
            android:padding="15dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/button_text_signup"
            android:onClick="onClickSignUp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shapesignup"
            android:padding="15dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/button_text_login"
            android:textColor="@color/white"
            android:onClick="onClickSignIn" />


    </LinearLayout>
</ScrollView>