<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back_li82">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <RelativeLayout
            android:id="@+id/relLforgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="back"
                android:layout_alignParentStart="true"
                android:layout_marginTop="22dp"
                android:src="@drawable/ic_back_press"
                android:onClick="onClickBackForget" />

            <ImageView
                android:id="@+id/forgot_logo"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="22dp"
                android:contentDescription="@string/contetn_Discription_logo"
                android:layout_centerHorizontal="true"

                android:src="@drawable/logo_v3_li8blue" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/relLforgot"
            android:layout_centerHorizontal="true"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageButton
                android:id="@+id/user_profile_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/forgotscreen"
                android:elevation="4dp"
                android:src="@drawable/ic_forgot_password" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:padding="20dp"
                android:background="@drawable/forgot_screen2"
                android:backgroundTintMode="src_atop">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="45dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_gravity="center_horizontal"
                        android:padding="10dp"
                        android:text="@string/TextView_forgot_password"
                        android:textColor="@android:color/white"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_horizontal"
                        android:padding="16dp"
                        android:text="@string/TextView_forgot_password_msg"
                        android:textColor="#aad3ff"
                        android:textSize="14dp" />

                    <EditText
                        android:id="@+id/etSignUpRegID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/shapeemail"
                        android:drawableStart="@drawable/ic_register_number"
                        android:drawablePadding="10dp"
                        android:hint="@string/editText_hint_register_number"
                        android:inputType="text"
                        android:padding="15dp"
                        android:textColor="@color/white"
                        android:textColorHighlight="@color/white"
                        android:textColorHint="@color/white" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_reset_password"
                        android:shadowColor="@android:color/transparent"
                        android:padding="15dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="0dp"
                        android:background="@drawable/shapesignup"
                        android:textColor="@color/white"
                        android:onClick="signUpFun" />
                </LinearLayout>
            </LinearLayout>


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="20dp"
                android:visibility="gone" />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>